<resources>
    <string name="app_name">Story App</string>
    <string name="illustration">illustration</string>
    <string name="welcome">Welcome 👋</string>
    <string name="intro_desc">Start your story for the world to know and Let your unique life glow.</string>
    <string name="button">Click Me</string>
    <string name="get_started">Get Started</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="date">12 January 2022</string>
    <string name="post_option">Post Option</string>
    <string name="dummy_text">Dolorem quae dolorem doloribus fugiat molestias. Voluptatem error aut voluptates.</string>
    <string name="post">Post</string>
    <string name="write_your_story">Write your story…</string>
    <string name="loading">Loading</string>
    <string name="capture_image">Capture Image</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="logout">Logout</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="empty">Empty</string>
    <string name="empty_stories">There is no stories yet</string>
    <string name="registration_complete">Registration complete</string>
    <string name="permission_denied">Permission not granted</string>
    <string name="post_story">Post Story</string>
    <string name="upload_success">Upload Success</string>
    <string name="add_description">Please add description first</string>
    <string name="choose_picture">Please choose a picture first</string>
    <string name="pick_image">Choose a Picture</string>
    <string name="failed_take_picture">Failed to take picture</string>
    <string name="failed_launch_camera">Failed to launch camera</string>
    <string name="minimum_char_8">Minimum character is 8</string>
    <string name="password_contain_number">Password must contain at least one number</string>
    <string name="minimum_char_5">Minimum character is 5</string>
    <string name="field_required">Field is required</string>
    <string name="email_not_valid">Email is not a valid email address</string>
    <string name="fill_the_field">Please fill in this field</string>
    <string name="title_activity_story_map">StoryMapActivity</string>
    <string name="retry">Retry</string>
</resources>