<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_16"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        style="@style/BrandSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/spacing_16"
        android:layout_marginBottom="@dimen/spacing_32"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/spacing_32">

        <ImageView
            android:id="@+id/iv_ilustration"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/drawkit_grape_pack_illustration_2"
            android:contentDescription="@string/illustration"
            android:layout_marginBottom="@dimen/spacing_32"/>

        <TextView
            android:id="@+id/tv_title"
            style="@style/Heading4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/spacing_8"
            android:alpha="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_subtitle"
            style="@style/Paragraph.small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_desc"
            android:textAlignment="center"
            android:textColor="@color/neutral_500"
            android:alpha="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <com.example.storyapp.component.PrimaryButton
        android:id="@+id/btn_start"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textFontWeight="600"
        android:alpha="0"
        android:layout_marginBottom="@dimen/spacing_16"
        app:text="@string/get_started"/>

</LinearLayout>