<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_16"
    tools:context=".ui.DetailStoryActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/iv_detail_photo"
            android:layout_width="0dp"
            android:layout_height="260dp"
            android:contentDescription="@string/post"
            android:scaleType="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_user_photo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/user_2"
            android:layout_marginTop="@dimen/spacing_16"
            app:civ_circle_background_color="@color/neutral_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_detail_photo" />

        <TextView
            android:id="@+id/tv_detail_name"
            style="@style/Heading5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:text="@string/loading"
            android:textColor="@color/black"
            android:textFontWeight="600"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_user_photo"
            app:layout_constraintTop_toTopOf="@+id/iv_user_photo" />

        <TextView
            android:id="@+id/tv_detail_description"
            style="@style/Paragraph.xSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/dummy_text"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_user_photo" />

        <TextView
            android:id="@+id/tv_detail_post_date"
            style="@style/Paragraph.xSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/date"
            android:textColor="@color/neutral_500"
            app:layout_constraintBottom_toBottomOf="@+id/iv_user_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_user_photo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.example.storyapp.component.PrimaryButton
        android:id="@+id/btn_explore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_24"
        android:layout_marginBottom="@dimen/spacing_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:text="Explore Stories"/>

    <include
        android:id="@+id/loading_indicator"
        layout="@layout/loading_indicator"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>